# world-builder-core

./: .gitignore  CMakeLists.txt  README.md
components/common/: CMakeLists.txt
components/common/include/worldbuilder/common/: map.hpp  terrain.hpp
components/common/src/: map.cpp  terrain.cpp
components/core/: CMakeLists.txt
components/core/include/worldbuilder/core/: worldbuilderengine.hpp
components/core/src/: worldbuilderengine.cpp
components/terrain/: CMakeLists.txt
test/: CMakeLists.txt
test/common/: terrain_test.cpp  test_main.cpp
